# lira-epymarl

./: .gitignore  .gitmodules  Makefile  README.md  env_requirements.txt  pyproject.toml
archive/setup/: requirements.txt
src/: main.py  run.py  search.config.wandb.mappo.yaml  wandb_sweep_wrapper_multi_seed.py  wandb_sweep_wrapper_single_seed.py
src/components/: action_selectors.py  episode_buffer.py
src/config/: default.yaml
src/config/algs/: drreinforcer.yaml  lica.yaml  maic.yaml
src/config/envs/: foraging-v2.yaml  gym_multigrid.yaml  join1-v0.yaml  join1_original.yaml
src/controllers/: __init__.py  maic_controller.py
src/envs/: __init__.py  basic_gymnasium_wrapper.py  gym_multigrid_wrapper.py  smaclite_wrapper.py
src/learners/: __init__.py  drreinforcer_learner.py  maic_learner.py
src/modules/agents/: __init__.py  maic_agent.py
src/modules/critics/: __init__.py
src/modules/rewards/: __init__.py
src/runners/: episode_runner.py
src/utils/: logging.py  rl_utils.py
